modals: Fix gap between fields in change user group info modal.

--- a/web/styles/modal.css
+++ b/web/styles/modal.css
@@ -1191,3 +1191,9 @@ ul.modal-options-list {
 #change_user_group_name {
     margin-bottom: 0;
 }
+
+#change_group_info_modal .user-group-info-modal-fields {
+    display: flex;
+    flex-direction: column;
+    gap: 0.625em; /* 10px at 16px/1em */
+}
